# Ignis

./: .clang-format  .gitignore  CMakeLists.txt  README.md
examples/: buffer.cpp  swapchain.cpp  utils.hpp
include/: buffer.hpp  command.hpp  descriptor_set_layout.hpp  device.hpp  exceptions.hpp  pipeline.hpp  pipeline_layout.hpp  shader.hpp  vertex_input_layout.hpp
include/ignis/: bindless_resources.hpp  buffer.hpp  color_image.hpp  command.hpp  depth_image.hpp  descriptor_set_layout.hpp  device.hpp  exception.hpp  exceptions.hpp  features.hpp  fence.hpp  gpu_resources.hpp  ignis.hpp  image.hpp  image_data.hpp  index_buffer.hpp  pipeline.hpp  pipeline_layout.hpp  sampler.hpp  semaphore.hpp  shader.hpp  swapchain.hpp  types.hpp  vertex_buffer.hpp  vk_utils.hpp
src/: bindless_resources.cpp  buffer.cpp  color_image.cpp  command.cpp  depth_image.cpp  descriptor_set_layout.cpp  device.cpp  exceptions.hpp  features.cpp  features.hpp  fence.cpp  gpu_resources.cpp  gpu_resources.hpp  image.cpp  pipeline.cpp  pipeline_layout.cpp  semaphore.cpp  shader.cpp  swapchain.cpp  vk_utils.cpp  vk_utils.hpp
test/: main.cpp  math.hpp  swapchain.cpp  utils.hpp  window.hpp
test/shaders/: vertex.spv  vertex.vert
